# StreamKeyswitch

./: .clangd  CMakeLists.txt  Makefile  README.md  optimized_tree_generated.cfg
build-cmake/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json  keyaware_regression_tests  keyaware_unit_tests
build-cmake-mac/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json  keyaware_cycle_tests  keyaware_runtime_plan_tests  keyaware_sim
build-cmake-mac/Testing/Temporary/: CTestCostData.txt
build-cmake-tests/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  keyaware_cycle_tests  keyaware_runtime_plan_tests  keyaware_sim
build-cmake-tests/Testing/Temporary/: CTestCostData.txt
build-cmake/Testing/Temporary/: CTestCostData.txt
he_params/: ckks_16k.cfg  ckks_32k.cfg
include/backend/: analytical_backend.h  cycle_backend.h  execution_backend.h  hybrid_backend.h  primitive_simulator.h  profile_table.h  runtime_planner.h  step_graph_runtime.h  table_backend.h
include/backend/cycle_backend/: bram_accounting.h  bram_tracker.h  cycle_backend.h  cycle_backend_cinnamon_ib.h  cycle_backend_cinnamon_oa.h  cycle_backend_digit_centric.h  cycle_backend_fab.h  cycle_backend_fast.h  cycle_backend_hera.h  cycle_backend_max_parrallel.h  cycle_backend_ola.h  cycle_backend_output_centric.h  cycle_backend_poseidon.h  cycle_backend_primitives.h
include/backend/cycle_sim/: arch.h  driver.h  instruction.h  lowering.h  stats.h
include/backend/hw/: hardware_model.h
include/backend/model/: keyswitch_execution_model.h  keyswitch_method_policy.h
include/common/: config_loader.h  experiment_config.h  he_params_loader.h  stats.h  types.h
include/model/: card.h  execution_result.h  he_params.h  keyswitch_method_resolver.h  keyswitch_reason.h  link.h  request.h  request_sizing.h  resource_tree.h  stage.h  system_state.h  user_profile.h  workload.h
include/scheduler/: affinity_scheduler.h  fifo_scheduler.h  hierarchical_scheduler.h  pool_scheduler.h  scheduler.h  score_scheduler.h  static_partition_scheduler.h
include/search/: tree_search.h
include/sim/: event.h  metrics.h  simulator.h
profiles/: example_stage_profile.csv
results/: metrics_cinnamon.csv  metrics_cinnamon_ib.csv  metrics_cinnamon_input_broadcast.csv  metrics_cinnamon_oa.csv  metrics_cinnamon_output_aggregation.csv  metrics_digit_centric.csv  metrics_fab.csv  metrics_fast.csv  metrics_hera.csv  metrics_max_parallel.csv  metrics_ola.csv  metrics_output_centric.csv  metrics_poseidon.csv
scripts/: batch_runner.py  draw_method_latency.py  plot_execution.py  run_regression.sh
src/: __init__.py  ciphertext.py  keyswitch_methods.py  main.cpp  memory_model.py  operation.py  parameter.py  primitive.py
src/backend/: analytical_backend.cpp  cycle_backend.cpp  hybrid_backend.cpp  primitive_simulator.cpp  profile_table.cpp  runtime_planner.cpp  step_graph_runtime.cpp  table_backend.cpp
src/backend/cycle_backend/: cycle_backend.cpp  cycle_backend_cinnamon_ib.cpp  cycle_backend_cinnamon_oa.cpp  cycle_backend_digit_centric.cpp  cycle_backend_digital_centric.cpp  cycle_backend_fab.cpp  cycle_backend_fast.cpp  cycle_backend_hera.cpp  cycle_backend_max_parallel.cpp  cycle_backend_max_parrallel.cpp  cycle_backend_ola.cpp  cycle_backend_output_centric.cpp  cycle_backend_poseidon.cpp  cycle_backend_primitives.cpp
src/backend/cycle_sim/: arch.cpp  driver.cpp  lowering.cpp
src/backend/hw/: hardware_model.cpp
src/backend/model/: keyswitch_execution_model.cpp
src/common/: config_loader.cpp  experiment_config.cpp  he_params_loader.cpp  stats.cpp
src/model/: workload.cpp
src/scheduler/: affinity_scheduler.cpp  fifo_scheduler.cpp  hierarchical_scheduler.cpp  pool_scheduler.cpp  score_scheduler.cpp  static_partition_scheduler.cpp
src/search/: tree_search.cpp
src/sim/: metrics.cpp  simulator.cpp
tests/: cycle_sim_tests.cpp  regression_tests.cpp  runtime_plan_observability_tests.cpp  test_framework.h  unit_tests.cpp
trees/: initial_tree_step15.cfg
